deployment.yml
apiVersion: app/v1
kind: Deployment

metadata:
  name: game-services

spec:
  replicas: 2
  selector:
    matchLabels:
      app: websocket-server
  template:
    metadata:
      labels:
        app: websocket-server
    spec:
      cotainer:
      - name: websocket-server
        image: kushalbhana/chessmasters-websocket-server
        ports:
        - containerPost: 8080
